--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +34,9 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
     "eslint-plugin-jest": "^23.3.0"
   }
+  
 }
